samples/map/valid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicmeta/>
  <topicref href="initial.dita" collection-type="family"/>
</map>