samples/map/invalid/R5.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="initial.dita" collection-type="family"/>
  <p>This is not allowed here.</p>
</map>